# postgres-rls-fastapi-demo

./: .env  main.py  pyproject.toml
app/: db.py  models.py
app/middleware/: postgres_rls.py
middleware/: __init__.py
migrations/: env.py
migrations/versions/: 06797e8e892f_create_toys_table.py  21b72afee37a_create_tenants_table.py  4c39bdd8dd20_create_user_role.py
