[tool.poetry]
name = "postgres-rls-fastapi-demo"
version = "0.1.0"
description = "Demo of a multi tenant app using postgres row level security"
authors = ["Aditya Mattos <adityamattos@hey.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.88.0"}
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
alembic = "^1.9.0"
greenlet = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
